--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "modifiedBy": "Nathaniel Liebhart",
   "license": "MIT",
   "devDependencies": {
-    "babel-cli": "6.26.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "1.7.0",
+    "@babel/core": "7.4.3",
+    "babel-loader": "8.0.5",
+    "@babel/polyfill": "7.4.3",
+    "@babel/preset-env": "7.4.3",
     "webpack": "^4.16.1",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.10"
